--- a/watch-eth/package.json
+++ b/watch-eth/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nest-typescript-starter",
+  "name": "@ja88a/nest-ethers-client",
   "private": true,
   "version": "1.0.0",
-  "description": "Nest TypeScript starter repository",
+  "description": "A NestJS Ethereum client service based on the ethers-io/EthersJS SDK",
   "license": "MIT",
   "scripts": {
     "prebuild": "rimraf dist",
