--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test": "yarn workspaces run test",
     "test:unit": "yarn workspaces run test:unit",
     "test:integration": "yarn workspaces run test:integration",
-    "test:example": "yarn workspace @ja88a/listen-eth test",
+    "test:example": "yarn workspace @ja88a/nest-ethers-client test",
     "test:example-start-server": "node ./helpers/server.js"
   },
   "devDependencies": {
