--- a/scrt-contract/oracle-chainlink-price/.gitignore
+++ b/scrt-contract/oracle-chainlink-price/.gitignore
@@ -1,8 +1,13 @@
 # Build results
 /target
 
+# Generated contract wasm
+*.wasm*
+
+*.sh
+
 # Cargo+Git helper file (https://github.com/rust-lang/cargo/blob/0.44.1/src/cargo/sources/git/utils.rs#L320-L327)
-.cargo-ok
+*/.cargo-ok
 
 # Text file backups
 **/*.rs.bk
