--- a/scrt-contract/oracle-chainlink-price/Cargo.toml
+++ b/scrt-contract/oracle-chainlink-price/Cargo.toml
@@ -45,3 +45,4 @@ secret-toolkit = { git = "https://github.com/enigmampc/secret-toolkit" }
 #subtle = { version = "2.2.3", default-features = false }
 #sha2 = { version = "0.9.1", default-features = false }
 #base64 = "0.12.3"
+#string_generator = "0.1.0"
