--- a/scrt-contract/oracle-chainlink-price/.gitignore
+++ b/scrt-contract/oracle-chainlink-price/.gitignore
@@ -5,6 +5,7 @@
 *.wasm*
 
 *.sh
+dist
 
 # Cargo+Git helper file (https://github.com/rust-lang/cargo/blob/0.44.1/src/cargo/sources/git/utils.rs#L320-L327)
 */.cargo-ok
