--- a/scrt-client/package.json
+++ b/scrt-client/package.json
@@ -1,21 +1,18 @@
 {
-  "name": "@ja88a/clrelay-ethereum-client",
+  "name": "@relayd/scrt-client",
   "private": true,
   "version": "0.1.0",
-  "description": "A NestJS Ethereum client service based on the ethers-io/EthersJS SDK",
+  "description": "A NestJS SecretNetwork client service based on the enigma/SecretJS SDK",
   "license": "MIT",
-  "main": "dist/index.js",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "move-types": "shx rm -rf ./types/* && shx cp -r dist/types ./types && rm -rf ./types/testdata && shx rm -f ./types/*.spec.d.ts && shx rm -f ./types/*/*.d.ts.map",
-    "format-types": "prettier --write --loglevel warn \"./types/**/*.d.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -23,15 +20,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@iov/crypto": "^2.5.0",
     "@nestjs/common": "^7.6.15",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/schedule": "^0.4.3",
-    "ethers": "^5.0.32",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.7"
+    "rxjs": "^6.6.7",
+    "secretjs": "^0.11.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
@@ -39,22 +37,23 @@
     "@nestjs/testing": "^7.6.15",
     "@types/cron": "^1.7.2",
     "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^26.0.22",
     "@types/node": "^14.14.36",
     "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "eslint": "^7.25.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "@typescript-eslint/eslint-plugin": "^4.19.0",
+    "@typescript-eslint/parser": "^4.19.0",
+    "eslint": "^7.22.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
+    "json-schema-to-typescript": "^10.1.4",
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.5",
-    "ts-loader": "^9.1.1",
+    "ts-jest": "^26.5.4",
+    "ts-loader": "^8.0.18",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.3"
   },
   "jest": {
     "moduleFileExtensions": [
