--- a/scrt-client/tsconfig.json
+++ b/scrt-client/tsconfig.json
@@ -1,18 +1,12 @@
 {
+  "extends": "../tsconfig.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "es2017",
-    "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true,
-    "typeRoots" : ["./typings"],
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-  }
+    "declarationDir": "./dist/types",
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": ["node_modules", "dist"]
 }
