--- a/common/package.json
+++ b/common/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "@relayd/scrt-client",
-  "private": true,
+  "name": "@relayd/common",
   "version": "0.1.0",
-  "description": "A NestJS SecretNetwork client service based on the Enigma/SecretJS SDK",
+  "description": "Data Relaying Handler - Shared resources, commons & utils",
+  "author": "Jabba Theone",
   "license": "MIT",
-  "main": "dist/main.js",
-  "types": "dist/types",
+  "main": "dist/index.js",
+  "types": "dist/types/index.d.ts",
 
   "scripts": {
+    "docs": "shx rm -rf docs && typedoc --options ../typedoc.js",
+    "move-types": "shx rm -rf ./types/* && shx cp -r dist/types/* ./types && rm -rf ./types/testdata && shx rm -f ./types/*.spec.d.ts && shx rm -f ./types/*.d.ts.map",
+    "format-types": "prettier --write --loglevel warn \"./types/**/*.d.ts\"",
+    "build:raw": "shx rm -rf ./dist && tsc && yarn move-types && yarn format-types",
+
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint '{src,apps,libs,test}/**/*.ts' --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
@@ -23,40 +24,40 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@iov/crypto": "^2.5.0",
     "@nestjs/common": "^7.6.15",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
+    "@nestjs/microservices": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
-    "@nestjs/schedule": "^0.4.3",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "kafkajs": "^1.15.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.7",
-    "secretjs": "^0.11.0"
+    "rxjs": "^6.6.7"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.1",
     "@nestjs/testing": "^7.6.15",
-    "@types/cron": "^1.7.2",
     "@types/express": "^4.17.11",
-    "@types/jest": "^26.0.22",
+    "@types/jest": "^26.0.23",
     "@types/node": "^14.14.36",
     "@types/supertest": "^2.0.10",
-    "@typescript-eslint/eslint-plugin": "^4.19.0",
-    "@typescript-eslint/parser": "^4.19.0",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
+    "@types/webpack": "^5.28.0",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.22.1",
     "jest": "^26.6.3",
-    "json-schema-to-typescript": "^10.1.4",
     "prettier": "^2.2.1",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.5.4",
-    "ts-loader": "^8.0.18",
+    "ts-jest": "^26.5.5",
+    "ts-loader": "^9.1.1",
     "ts-node": "^9.1.1",
     "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.2.3"
+    "typescript": "^4.2.4"
   },
   "jest": {
     "moduleFileExtensions": [
@@ -65,13 +66,10 @@
       "ts"
     ],
     "rootDir": "src",
-    "testRegex": ".*\\.spec\\.ts$",
+    "testRegex": ".spec.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
     },
-    "collectCoverageFrom": [
-      "**/*.(t|j)s"
-    ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
