--- a/eth-client/package.json
+++ b/eth-client/package.json
@@ -10,7 +10,7 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "move-types": "shx rm -rf ./types/* && shx cp -r dist/types ./types && rm -rf ./types/testdata && shx rm -f ./types/*.spec.d.ts && shx rm -f ./types/*/*.d.ts.map",
+    "move-types": "shx rm -rf ./types && shx cp -r dist/types ./types && rm -rf ./types/testdata && shx rm -f ./types/*.spec.d.ts && shx rm -f ./types/*.d.ts.map",
     "format-types": "prettier --write --loglevel warn \"./types/**/*.d.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
