--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "private": true,
   "workspaces": [
+    "common",
     "eth-client",
     "scrt-client",
     "feed-handler"
@@ -56,6 +57,7 @@
     "shx": "^0.3.3",
     "ts-node": "^8.10.2",
     "typescript": "^4.2.3",
+    "webpack": "^5.37.1",
     "wsrun": "^5.2.4"
   }
 }
