add all-in-one node and fnalize integration of the 3 main modules

--- a/eth-client/tsconfig.json
+++ b/eth-client/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "declarationDir": "./dist/types",
-    "typeRoots" : ["./typings"],
+    //"typeRoots" : ["./typings"],
   },
   "include": [
     "src/**/*"
