--- a/eth-client/package.json
+++ b/eth-client/package.json
@@ -5,6 +5,7 @@
   "description": "A NestJS Ethereum Client module based on the ethers-io/EthersJS SDK",
   "license": "MIT",
   "main": "dist/index.js",
+  "types": "dist/types/index.d.ts",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
