--- a/scrt-client/tsconfig.json
+++ b/scrt-client/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "extends": "../tsconfig.json",
+  
   "compilerOptions": {
     "outDir": "./dist",
-    "baseUrl": "./",
+    "baseUrl": ".",
     "declarationDir": "./dist/types",
   },
   "include": [
