--- a/node-aio/package.json
+++ b/node-aio/package.json
@@ -26,13 +26,13 @@
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
-    "reflect-metadata": "^0.1.13",
-    "rimraf": "^3.0.2",
-    "rxjs": "^6.6.7",
     "@relayd/scrt-client": "~0.1.0",
     "@relayd/eth-client": "~0.1.0",
     "@relayd/feed-handler": "~0.1.0",
-    "@relayd/common": "~0.1.0"
+    "@relayd/common": "~0.1.0",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.6.7"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
