--- a/scrt-client/package.json
+++ b/scrt-client/package.json
@@ -29,6 +29,7 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/platform-express": "^7.6.15",
     "@nestjs/schedule": "^0.4.3",
+    "@relayd/common": "~0.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.7",
