--- a/common/package.json
+++ b/common/package.json
@@ -32,6 +32,7 @@
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
     "kafkajs": "^1.15.0",
+    "kafka-streams": "^5.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.7"
