--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "setup": "yarn wsrun -mre -t setup && yarn wsrun -mre -t setup",
     "test:unit": "yarn workspaces run test:unit",
     "test:integration": "yarn workspaces run test:integration",
-    "test:example": "yarn workspace @ja88a/clrelay-ethereum-client test",
+    "test:example": "yarn workspace @relayd/eth-client test",
     "test:example-start-server": "node ./helpers/server.js",
     "test": "lerna run test"
   },
@@ -57,7 +57,7 @@
     "prettier": "^2.0.5",
     "shx": "^0.3.3",
     "ts-node": "^8.10.2",
-    "typescript": "^4.2.3",
+    "typescript": "^4.2.4",
     "webpack": "^5.37.1",
     "wsrun": "^5.2.4"
   }
