--- a/feed-handler/package.json
+++ b/feed-handler/package.json
@@ -11,7 +11,9 @@
     "move-types": "shx rm -rf ./types && shx cp -r dist/types ./types && shx rm -f ./types/*.spec.d.ts && shx rm -f ./types/*.d.ts.map",
     "format-types": "prettier --write --loglevel warn \"./types/**/*.d.ts\"",
     "build:raw": "shx rm -rf ./dist && tsc && yarn move-types && yarn format-types",
-    "rebuild:node-rdkafka": "npm install node-rdkafka",
+    "rebuild:node-rdkafka": "BUILD_LIBRDKAFKA=0 npm install node-rdkafka",
+    "clean": "shx rm -rf ./dist ./*.tsbuildinfo",
+    "reset": "yarn clean && shx rm -rf ./node_modules ./yarn.lock ./package-lock.json",
     "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
