--- a/eth-client/package.json
+++ b/eth-client/package.json
@@ -13,6 +13,8 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "move-types": "shx rm -rf ./types && shx cp -r dist/types ./types && rm -rf ./types/testdata && shx rm -f ./types/*.spec.d.ts && shx rm -f ./types/*.d.ts.map",
     "format-types": "prettier --write --loglevel warn \"./types/**/*.d.ts\"",
+    "clean": "shx rm -rf ./dist ./*.tsbuildinfo",
+    "reset": "yarn clean && shx rm -rf ./node_modules ./yarn.lock ./package-lock.json",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
