--- a/eth-client/package.json
+++ b/eth-client/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@relayd/eth-client",
-  "private": true,
   "version": "0.1.0",
   "description": "A NestJS Ethereum Client module based on the ethers-io/EthersJS SDK",
+  "author": "Jabba Theone",
   "license": "MIT",
   "main": "dist/index.js",
-  "types": "dist/types/index.d.ts",
+  "types": "dist/types",
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
@@ -18,6 +18,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
+    "start:inspect": "NODE_OPTIONS='--inspect' node dist/main",
     "start:prod": "node dist/main",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -29,10 +30,15 @@
     "@nestjs/common": "^7.6.15",
     "@nestjs/config": "^0.6.3",
     "@nestjs/core": "^7.6.15",
-    "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/microservices": "^7.6.17",
     "@nestjs/schedule": "^0.4.3",
     "@relayd/common": "~0.1.0",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
     "ethers": "^5.0.32",
+    "kafka-streams": "^5.0.0",
+    "kafkajs": "^1.15.0",
+    "node-rdkafka": "^2.10.1",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.7"
@@ -46,6 +52,7 @@
     "@types/jest": "^26.0.23",
     "@types/node": "^12.12.6",
     "@types/supertest": "^2.0.10",
+    "@types/webpack": "^5.28.0",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "eslint": "^7.25.0",
