--- a/node-aio/package.json
+++ b/node-aio/package.json
@@ -15,6 +15,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
+    "start:inspect": "NODE_OPTIONS='--inspect' node dist/main",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
