--- a/scrt-client/package.json
+++ b/scrt-client/package.json
@@ -10,14 +10,15 @@
   "scripts": {
     "prebuild": "rimraf dist",
     "build": "nest build",
+    "build:watch": "yarn build --watch",
     "clean": "shx rm -rf ./dist ./*.tsbuildinfo",
-    "reset": "yarn clean && shx rm -rf ./node_modules ./yarn.lock ./package-lock.json",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "reset": "yarn clean && shx rm -rf ./node_modules ./yarn.lock ./package-lock.json",
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
