--- a/broker-kafka/docker-compose.yml
+++ b/broker-kafka/docker-compose.yml
@@ -67,13 +67,13 @@ services:
   #   ports:
   #     - 9000:9000
 
-  kafka-ui:
-    image: provectuslabs/kafka-ui
-    container_name: kafka-ui
-    ports:
-      - "8080:8080"
-#    restart: always
-    environment:
-      - KAFKA_CLUSTERS_0_NAME=CLRelayGroup-server
-      - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
-      - KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper:2181
+#   kafka-ui:
+#     image: provectuslabs/kafka-ui
+#     container_name: kafka-ui
+#     ports:
+#       - "8080:8080"
+# #    restart: always
+#     environment:
+#       - KAFKA_CLUSTERS_0_NAME=CLRelayGroup-server
+#       - KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS=kafka:9092
+#       - KAFKA_CLUSTERS_0_ZOOKEEPER=zookeeper:2181
