--- a/common/package.json
+++ b/common/package.json
@@ -33,6 +33,7 @@
     "@nestjs/platform-express": "^7.6.15",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "ethers": "^5.0.32",
     "kafkajs": "^1.15.0",
     "kafka-streams": "^5.0.0",
     "reflect-metadata": "^0.1.13",
