--- a/eth-client/.env-sample
+++ b/eth-client/.env-sample
@@ -3,6 +3,6 @@ ETH_PROVIDER_TYPE = 'default'
 
 ETH_PROVIDER_LOCAL_URL = 'ws://192.168.10.1:8548'
 
-ETHERSCAN_API_KEY = 
-INFURA_PROJECT_ID = 
-INFURA_PROJECT_SECRET = 
+ETH_ETHERSCAN_API_KEY = 
+ETH_INFURA_PROJECT_ID = 
+ETH_INFURA_PROJECT_SECRET = 
