--- a/node-aio/.env.example
+++ b/node-aio/.env.example
@@ -1,3 +1,19 @@
+APP_RUN_MODE='dev.local'
+
+## EthereumNetwork Client config =======================================
+
+ETH_PROVIDER_NETWORK_ID='homestead'
+
+ETH_PROVIDER_TYPE='default'
+
+ETH_PROVIDER_LOCAL_URL='ws://192.168.0.10:8548'
+
+ETH_ETHERSCAN_API_KEY=
+ETH_INFURA_PROJECT_ID=
+ETH_INFURA_PROJECT_SECRET=
+
+## SecretNetwork Client config =======================================
+
 SECRET_REST_URL='https://secret-2--lcd--full.datahub.figment.io/apikey/<YOUR API KEY>/'
 SECRET_RPC_URL='https://secret-2--rpc--full.datahub.figment.io/apikey/<YOUR API KEY>/'
 SECRET_CHAIN_ID='secret-2'
