fix resources import and decrease logs

--- a/eth-client/package.json
+++ b/eth-client/package.json
@@ -18,6 +18,7 @@
     "clean": "shx rm -rf ./dist ./*.tsbuildinfo",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "postbuild": "shx cp ./src/resources/*.json ./dist/resources",
     "prebuild": "rimraf dist",
     "reset": "yarn clean && shx rm -rf ./node_modules ./yarn.lock ./package-lock.json",
     "start": "nest start",
@@ -42,7 +43,7 @@
     "@relayd/common": "~0.1.0",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
-    "ethers": "^5.0.32",
+    "ethers": "~5.4.3",
     "kafka-streams": "^5.0.0",
     "kafkajs": "^1.15.0",
     "node-rdkafka": "^2.10.1",
